==> RT-Thread/rt-thread/bsp/airm2m/air32f103/libraries/rt_drivers/drv_gpio.c <==
#include <board.h>
#include "drv_gpio.h"
#define PIN_NUM(port, no) (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin) ((uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin) ((uint8_t)((pin) & 0xFu))
#define PIN_AIRPORT(pin) ((GPIO_TypeDef *)(GPIOA_BASE + (0x400u * PIN_PORT(pin))))
#define PIN_AIRPIN(pin) ((uint16_t)(1u << PIN_NO(pin)))
#define __AIR32_PORT_MAX 12u
#define __AIR32_PORT_MAX 11u
#define __AIR32_PORT_MAX 10u
#define __AIR32_PORT_MAX 9u
#define __AIR32_PORT_MAX 8u
#define __AIR32_PORT_MAX 7u
#define __AIR32_PORT_MAX 6u
#define __AIR32_PORT_MAX 5u
#define __AIR32_PORT_MAX 4u
#define __AIR32_PORT_MAX 3u
#define __AIR32_PORT_MAX 2u
#define __AIR32_PORT_MAX 1u
#define __AIR32_PORT_MAX 0u
#define PIN_AIRPORT_MAX __AIR32_PORT_MAX
#define ITEM_NUM(items) (sizeof(items) / sizeof((items)[0]))

int rt_hw_pin_init(void)
{
#ifdef GPIOA
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
#endif
#ifdef GPIOB
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
#endif
#ifdef GPIOC
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);
#endif
#ifdef GPIOD
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD, ENABLE);
#endif
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);

    return rt_device_pin_register("pin", &_air32_pin_ops, RT_NULL);
}
